# hill

./: .env.example  .gitignore  Cargo.toml  Dockerfile
src/: main.rs
src/admin/: handlers.rs
src/analytics/application/: service.rs
src/analytics/domain/: entity.rs  error.rs  port.rs
src/analytics/infra/: analytics_repo.rs  mod.rs
src/analytics/presentation/: handlers.rs
src/billing/application/: service.rs
src/billing/domain/: entity.rs  error.rs  port.rs
src/billing/infra/: invoice_repo.rs  mod.rs  razorpay_gateway.rs
src/billing/presentation/: handlers.rs
src/clients/application/: service.rs
src/clients/domain/: entity.rs  error.rs  port.rs
src/clients/infra/: client_repo.rs  client_session_type_repo.rs  mod.rs  portal_repo.rs
src/clients/presentation/: handlers.rs
src/clinical/: mod.rs
src/clinical/application/: service.rs
src/clinical/domain/: entity.rs  error.rs  port.rs
src/clinical/infra/: encryption_adapter.rs  message_repo.rs  mod.rs  note_repo.rs  treatment_plan_repo.rs
src/clinical/presentation/: handlers.rs
src/engagement/application/: service.rs
src/engagement/domain/: entity.rs  error.rs  port.rs
src/engagement/infra/: broadcast_adapter.rs  encryption_adapter.rs  intake_form_repo.rs  intake_question_repo.rs  lead_intake_repo.rs  message_template_repo.rs  mod.rs  resource_repo.rs
src/engagement/presentation/: handlers.rs
src/iam/application/: service.rs
src/iam/domain/: entity.rs  error.rs  port.rs
src/iam/infra/: availability_repo.rs  invitation_repo.rs  mod.rs  onboarding_repo.rs  practice_repo.rs  therapist_repo.rs
src/shared/: auth.rs  config.rs  email.rs  encryption.rs  error.rs  mod.rs  types.rs
src/system/: composition.rs
(+20 files in other folders)
