[package]
name = "bendre-backend"
version = "0.1.0"
edition = "2024"
authors = ["Bendre Team"]
license = "UNLICENSED"

[[bin]]
name = "bendre-server"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["serde", "v4"] }

# Auth
jsonwebtoken = "9"

# Encryption
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.9"

# HTTP client (integrations)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# OAuth2
oauth2 = "5"

# Webhook signatures
hmac = "0.12"
sha2 = "0.10"

# Analytics
posthog-rs = "0.4"

# OpenAPI
utoipa = { version = "5", features = ["actix_extras", "chrono", "uuid"] }
utoipa-actix-web = "0.1"
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }

# Validation
validator = { version = "0.20", features = ["derive"] }

# Error handling — domain errors ONLY, no anyhow
thiserror = "2"

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-web = { version = "4", features = ["macros"] }
